--- a/GameTest/GameTest.vcxproj.filters
+++ b/GameTest/GameTest.vcxproj.filters
@@ -35,6 +35,7 @@
     <ClCompile Include="Map.cpp" />
     <ClCompile Include="EventManager.cpp" />
     <ClCompile Include="SoundWave.cpp" />
+    <ClCompile Include="SegmentedWall.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stdafx.h" />
@@ -82,6 +83,7 @@
     <ClInclude Include="Events.h" />
     <ClInclude Include="SoundWave.h" />
     <ClInclude Include="PowerUp.h" />
+    <ClInclude Include="SegmentedWall.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="API">
